# neurosync

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  RULES_coding.md  concept.md  docker-compose.yml  implementationplan.md  neurosync_ui.html  ports.env  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
neurosync/: __init__.py
neurosync/app/: __init__.py  main.py  web.py
neurosync/audio/: __init__.py  engine.py  midi.py  mixer.py
neurosync/config/: __init__.py
neurosync/dsp/: __init__.py  core.py  harmonic.py  isochronic.py
neurosync/effects/: __init__.py
neurosync/presets/: __init__.py  defs.py
neurosync/sessions/: __init__.py  controller.py  timeline.py
neurosync/ui/: __init__.py  bridge.py
neurosync/ui/qml/: main.qml
neurosync/ui/qml/components/: BrainVisualizer.qml  FrequencyReadout.qml  FrequencyRings.qml  ParameterPanel.qml  PresetGrid.qml  WaveformDisplay.qml  qmldir
neurosync/ui/qml/views/: MainView.qml
neurosync/visualizers/: __init__.py  engine.py  particles.py
scripts/: run.sh
tests/: __init__.py  conftest.py  test_audio.py  test_dsp.py  test_main.py  test_midi.py  test_mixer.py  test_particles.py  test_presets.py  test_sessions.py  test_timeline.py  test_visualizers.py  test_web_api.py
